# pinball

./: .gitignore  CITATION.cff  LICENSE  README.md  pinball_colab_run.ipynb  pinball_collab_run.ipynb  pyproject.toml
configs/: pinball_copy.yaml  pinball_hqd.yaml  pinball_masked_diffusion.yaml  pinball_wikitext.yaml  transformer_wikitext.yaml
src/pinball/: __init__.py  cli.py  config.py
src/pinball/data/: __init__.py  karpathy_loader.py  text_dataset.py
src/pinball/model/: __init__.py  batched_layer_executor.py  enhanced_hierarchical_flow_gat.py  hierarchical_flow_gat_cached_batch.py  model_registry.py  param_estimator.py  transformer_baseline.py
src/pinball/model/hierarchy/: __init__.py  unified_hierarchy_builder.py
src/pinball/model/layers/: __init__.py  hierarchical_message_passing.py  normalization.py  positional_encoding.py
src/pinball/train/: __init__.py  trainer.py
src/pinball/utils/: __init__.py  amp.py  cycle_warmup.py  debug_sampler.py  pyg_utils.py
tests/: test_matrix.py  test_smoke.py  test_trainer_loop.py
